Added css, js, and image assets

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Technical Northwest</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" href="./assets/images/sample-logo.png" type="image/x-icon">
   </head>
   <body>
     <main>
-        <h1>Big things coming soon</h1>  
+        <h1>Welcome to Technical Northwest</h1>
+        <p>We have big plans</p>
     </main>
-  <script src="index.js"></script>
+  <script src="./assets/js/index.js"></script>
   </body>
 </html>
