--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> grant murray <span></span>   </h2>
 							<p>computer science major</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<a href="assets/download/resume-GrantMurray.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -841,7 +841,7 @@
 			<div class="container">
 				<div class="hm-footer-copyright text-center">
 					<p>
-						&copy; copyright grant murray. design and developed by <a href="https://www.themesine.com/">themesine</a>
+						&copy; copyright Grant Murray. design and developed by <a href="https://www.themesine.com/">themesine</a>
 					</p><!--/p-->
 				</div><!--/.text-center-->
 			</div><!--/.container-->
