--- a/index.html
+++ b/index.html
@@ -158,12 +158,6 @@
 										</li><!-- / li -->
 										<li>
 											<a href="#">
-												<i  class="fa fa-dribbble" aria-hidden="true"></i>
-											</a>
-											
-										</li><!-- / li -->
-										<li>
-											<a href="#">
 												<i  class="fa fa-twitter" aria-hidden="true"></i>
 											</a>
 											
@@ -240,26 +234,6 @@
 										</h4>
 										<h5>washington state, USA</h5>
 										<p class="description">
-											// coming soon // 
-										</p>
-									</div><!--/.timeline-content-->
-								</div><!--/.timeline-->
-							</div>
-						</div>
-						<div class="col-sm-4">
-							<div class="single-horizontal-timeline">
-								<div class="experience-time">
-                  <h2><span></h2>
-									<h3>bachelor <span>of </span> creative design</h3>
-								</div><!--/.experience-time-->
-								<div class="timeline-horizontal-border">
-									<i class="fa fa-circle" aria-hidden="true"></i>
-									<span class="single-timeline-vertical spacial-horizontal-line
-									"></span>
-								</div>
-								<div class="timeline">
-									<div class="timeline-content">
-									  <p class="description">
 											// coming soon // 
 										</p>
 									</div><!--/.timeline-content-->
@@ -570,13 +544,13 @@
 							<div class="col-sm-3">
 								<div class="single-profile">
 									<div class="profile-txt">
-										<a href=""><i class="flaticon-themeforest"></i></a>
-										<div class="profile-icon-name">themeforest</div>
+										<a href="https://github.com/GrantMurray"><i class="flaticon-github-logo"></i></a>
+										<div class="profile-icon-name">github</div>
 									</div>
 									<div class="single-profile-overlay">
 										<div class="profile-txt">
-											<a href=""><i class="flaticon-themeforest"></i></a>
-											<div class="profile-icon-name">themeforest</div>
+											<a href="https://github.com/GrantMurray"><i class="flaticon-github-logo"></i></a>
+											<div class="profile-icon-name">github</div>
 										</div>
 									</div>
 								</div>
@@ -821,7 +795,6 @@
 								<div class="hm-foot-icon">
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
