--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> grant murray <span></span>   </h2>
+							<h2>grant murray</h2>
 							<p>computer science major</p>
-							<a href="assets/download/resume-GrantMurray.pdf" download>download resume</a>
+              <a href="assets/download/resume-GrantMurray.pdf" download>resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
